feat: Introduce hybrid session management utilizing Redis for caching and PostgreSQL for persistent storage with RAG capabilities.

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,27 @@ DEFAULT_LLM_MODEL="Qwen/Qwen3-8B"
 # LOG_LEVEL=INFO
 # API_HOST=0.0.0.0
 # API_PORT=8000
+
+# ===========================================
+# Session Management (Optional)
+# ===========================================
+# Redis - Short-term context cache (uses in-memory fallback if not set)
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+# REDIS_DATABASE=0
+# REDIS_PASSWORD=
+
+# PostgreSQL - Long-term persistent history with vector search
+# POSTGRES_HOST=localhost
+# POSTGRES_PORT=5432
+# POSTGRES_DB=xhs_food_agent
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=
+
+# ===========================================
+# Embedding API (Optional - for vector search)
+# ===========================================
+# Separate embedding API config (if different from LLM API)
+# EMBEDDING_API_KEY="your_embedding_api_key"
+# EMBEDDING_API_BASE="https://api.openai.com/v1/"
+# EMBEDDING_MODEL="text-embedding-3-small"
