--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,12 @@ dependencies = [
     
     # Crypto for XHS API
     "pycryptodome>=3.19.0",
+    
+    # Session Management - Redis + PostgreSQL
+    "redis>=5.0.0",
+    "asyncpg>=0.29.0",
+    "psycopg2-binary>=2.9.0",
+    "pgvector>=0.2.0",
 ]
 
 [project.optional-dependencies]
