feat: multi-user storage system with SSE streaming and documentation
- Add multi-user session management with Redis (L1) + PostgreSQL (L2)

- Implement SSE streaming search with real-time progress updates

- Add favorites, search history, and user profile APIs

- Create comprehensive module documentation (agents, services, spider, api)

- Update README with enhanced layout and features

- Add migration scripts for SSE recovery and favorites

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,24 @@ DEFAULT_LLM_MODEL="Qwen/Qwen3-8B"
 # DEFAULT_LLM_MODEL="deepseek-chat"
 
 # ===========================================
+# Search Settings
+# ===========================================
+# 搜索模式: true=深度研究（无笔记上限），false=快速模式（有笔记上限）
+SEARCH_DEEP_MODE=false
+
+# 快速模式下的笔记搜索上限
+SEARCH_NOTE_LIMIT=15
+
+# 每次关键词搜索返回的笔记数
+SEARCH_NOTES_PER_KEYWORD=4
+
+# 最终推荐的店铺数量上限
+SEARCH_MAX_RESTAURANTS=10
+
+# SSE 流超时时间（秒），分析评论可能较慢，建议设大一些
+SSE_TIMEOUT=900
+
+# ===========================================
 # Optional Settings
 # ===========================================
 # LOG_LEVEL=INFO
